stockContoller eklemeleri
