# swagger/swagger.json
@@ -257,6 +257,7 @@
 					}
 				},
 				"required": [
+					"_id",
 					"companyProfileID",
 					"stockName",
 					"stockNameEN",
@@ -518,7 +519,240 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"addStockkInOutParams": {
+				"properties": {
+					"stockID": {
+						"$ref": "#/components/schemas/OId"
+					},
+					"type": {
+						"type": "string"
+					},
+					"billingNumber": {
+						"type": "string"
+					},
+					"billingDate": {
+						"type": "string"
+					},
+					"supplierGroupID": {
+						"$ref": "#/components/schemas/OId"
+					},
+					"customerGroupID": {
+						"$ref": "#/components/schemas/OId"
+					},
+					"recordDate": {
+						"type": "string"
+					},
+					"unit": {
+						"type": "string"
+					},
+					"count": {
+						"type": "number",
+						"format": "double"
+					},
+					"currency": {
+						"type": "string"
+					},
+					"purchasePrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"unitPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"costPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"salesPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"barcode": {
+						"type": "string"
+					},
+					"leadTime": {
+						"type": "string"
+					},
+					"billingPDFLink": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"stockID",
+					"type",
+					"billingNumber",
+					"billingDate",
+					"supplierGroupID",
+					"customerGroupID",
+					"recordDate",
+					"unit",
+					"count",
+					"currency",
+					"purchasePrice",
+					"unitPrice",
+					"costPrice",
+					"salesPrice",
+					"barcode",
+					"leadTime",
+					"billingPDFLink"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"updateGeneralStockParams": {
+				"properties": {
+					"companyProfileID": {
+						"$ref": "#/components/schemas/OId"
+					},
+					"stockName": {
+						"type": "string"
+					},
+					"stockNameEN": {
+						"type": "string"
+					},
+					"stockCode": {
+						"type": "string"
+					},
+					"stockType": {
+						"type": "string"
+					},
+					"recordDate": {
+						"type": "string"
+					},
+					"isMainStock": {
+						"type": "boolean"
+					},
+					"status": {
+						"type": "string"
+					},
+					"marks": {
+						"type": "string"
+					},
+					"model": {
+						"type": "string"
+					},
+					"generalBarcode": {
+						"type": "string"
+					},
+					"stockUnit": {
+						"type": "string"
+					},
+					"stockCount": {
+						"type": "number",
+						"format": "double"
+					},
+					"shelfNo": {
+						"type": "string"
+					},
+					"shelfFloorNo": {
+						"type": "string"
+					},
+					"specialCode": {
+						"type": "string"
+					},
+					"category": {
+						"type": "string"
+					},
+					"subCategory": {
+						"type": "string"
+					},
+					"subSubCategory": {
+						"type": "string"
+					},
+					"descriptions": {
+						"type": "string"
+					},
+					"producerCode": {
+						"type": "string"
+					},
+					"sutCode": {
+						"type": "string"
+					},
+					"producerName": {
+						"type": "string"
+					},
+					"producerAddress": {
+						"type": "string"
+					},
+					"leadTime": {
+						"type": "string"
+					},
+					"weightKg": {
+						"type": "number",
+						"format": "double"
+					},
+					"weight": {
+						"type": "string"
+					},
+					"costPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"outsourcingPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"outsourcing": {
+						"type": "boolean"
+					},
+					"utsRecord": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"companyProfileID",
+					"stockName",
+					"stockNameEN",
+					"stockCode",
+					"stockType",
+					"recordDate",
+					"isMainStock",
+					"status",
+					"marks",
+					"model",
+					"generalBarcode",
+					"stockUnit",
+					"stockCount",
+					"shelfNo",
+					"shelfFloorNo",
+					"specialCode",
+					"category",
+					"subCategory",
+					"subSubCategory",
+					"descriptions",
+					"producerCode",
+					"sutCode",
+					"producerName",
+					"producerAddress",
+					"leadTime",
+					"weightKg",
+					"weight",
+					"costPrice",
+					"outsourcingPrice",
+					"outsourcing",
+					"utsRecord"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ISupplierGroup": {
+				"properties": {
+					"_id": {
+						"$ref": "#/components/schemas/OId"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"_id",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IUnit": {
 				"properties": {
 					"_id": {
 						"$ref": "#/components/schemas/OId"
@@ -893,6 +1127,89 @@
 				}
 			}
 		},
+		"/stock/stock-in-out": {
+			"post": {
+				"operationId": "AddStockInOut",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/addStockkInOutParams"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Stock"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/addStockkInOutParams"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/stock/{id}": {
+			"patch": {
+				"operationId": "UpdateUserById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Document_any.any.any_"
+										},
+										{
+											"$ref": "#/components/schemas/IGeneralStock"
+										},
+										{
+											"$ref": "#/components/schemas/Required_any_"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Stock"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/OId"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/updateGeneralStockParams"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/supplier/supplier-get": {
 			"get": {
 				"operationId": "GetAllSuppliers",
@@ -934,6 +1251,52 @@
 				},
 				"tags": [
 					"Supplier"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/units/get-all": {
+			"get": {
+				"operationId": "GetAllUnits",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"allOf": [
+											{
+												"$ref": "#/components/schemas/Document_any.any.any_"
+											},
+											{
+												"$ref": "#/components/schemas/IUnit"
+											},
+											{
+												"$ref": "#/components/schemas/Document_any.any.any_"
+											},
+											{
+												"properties": {
+													"_id": {
+														"$ref": "#/components/schemas/ObjectId"
+													}
+												},
+												"required": [
+													"_id"
+												],
+												"type": "object"
+											}
+										]
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Units"
 				],
 				"security": [],
 				"parameters": []
